<resources>
    <string name="app_name">StackExchangeUsers</string>

    <string name="users_api_url">https://api.stackexchange.com/2.3/</string>

    <string name="no_data">No data available, please refresh</string>

    <string name="loading">Loading</string>
    <string name="refresh">Refresh</string>

    <string name="badges_no_badges">Sorry no badges!</string>
    <string name="badges_have_badges">Bronze: %1$d Silver: %2$d Gold:%3$d</string>

    <string name="user_name">User Name:</string>
    <string name="user_reputation">Reputation:</string>
    <string name="user_badges">Badges:</string>
    <string name="user_location">Location:</string>
    <string name="user_creation_date">Creation Date:</string>
    <string name="search_for_user">Search for user</string>
    <string name="search">Search</string>


</resources>