<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="co.uk.stackexchangeusers.presentation.userlist.UserListViewModel" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.userlist.UserListFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:hint="@string/search_for_user"
                android:id="@+id/textSearch"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_view_list_users"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layoutAnimation="@anim/layout_animation"
            app:items="@{viewModel.userListLiveData}"
            android:visibility="@{viewModel.errorLiveData ? View.GONE : View.VISIBLE}"
            tools:listitem="@layout/item_user"/>

        <LinearLayout
            android:padding="@dimen/padding_small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:padding="@dimen/padding_small"/>
            <Button
                android:id="@+id/button_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"/>

        </LinearLayout>

    </LinearLayout>
</layout>